Search Engine Optimization
Added keywords and a description to each page

--- a/FAQ.html
+++ b/FAQ.html
@@ -5,6 +5,8 @@
 	<title>Waubonsie Mental Health Center</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
+	<meta name="description" content="A great staff team to for mental help or information about mental health!">
+	<meta name="keywods" content="Mental Health, Waubonsie, Support, Susan Ecker">
 </head>
 <div class="topnav">
 	<a class="active" href="index.html">Home</a>
