--- a/comsupser.html
+++ b/comsupser.html
@@ -1,48 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Waubonsie Mental Health Center</title>
-		<meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <div class="topnav">
-    <a class="active" href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="providers.html">Providers</a>
-    <a href="FAQ.html">FAQ</a>
-    <a href="extrahelp.html">Extra Help</a>
-    <a href="contact.html">Contact</a>
-  </div>
+
+<head>
+	<title>Waubonsie Mental Health Center</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="style.css">
+	<meta name="description" content="A great staff team to for mental help or information about mental health!">
+	<meta name="keywods" content="Mental Health, Waubonsie, Support, Susan Ecker">
+</head>
+<div class="topnav">
+	<a class="active" href="index.html">Home</a>
+	<a href="services.html">Services</a>
+	<a href="providers.html">Providers</a>
+	<a href="FAQ.html">FAQ</a>
+	<a href="extrahelp.html">Extra Help</a>
+	<a href="contact.html">Contact</a>
+</div>
+
 <body>
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 
-<div id="contact">
-	<div class="services">
-		<h1>Community Support Services</h1>
-	</div>
-	<table>
+	<div id="contact">
+		<div class="services">
+			<h1>Community Support Services</h1>
+		</div>
+		<table>
 			<tr>
-					<td>
-						<p>Community Support Services provides home and community-based support to individuals living with serious, persistent mental illness. Together with their assigned Community Support Specialist, clients in this program work on setting, meeting, and maintaining their wellness goals!
- </p>
+				<td>
+					<p>Community Support Services provides home and community-based support to individuals living with serious, persistent mental illness. Together with their assigned Community Support Specialist, clients in this program work on setting,
+						meeting, and maintaining their wellness goals!
+					</p>
 
-					<td><img src="Images\beyou.png"
-					alt="be you"></td>
+				<td><img src="Images\beyou.png" alt="be you"></td>
 			</tr>
-	</table>
+		</table>
 
-	<h3>Who's eligible to receive this service?</h3>
-	<p>This service is available to adults living in the counties listed above, with a history of psychiatric treatment more intensive than outpatient care, more than once in their lifetime, that are in need of assistance/additional supports in order to function in their community. Iowa Medicaid or regional funding are required for eligibility.
-</p>
-	<h3>Where can I get this service? </h3>
- 	<p>Page, Fremont, and Montgomery Counties</p>
-</div>
-<footer>
+		<h3>Who's eligible to receive this service?</h3>
+		<p>This service is available to adults living in the counties listed above, with a history of psychiatric treatment more intensive than outpatient care, more than once in their lifetime, that are in need of assistance/additional supports in order
+			to function in their community. Iowa Medicaid or regional funding are required for eligibility.
+		</p>
+		<h3>Where can I get this service? </h3>
+		<p>Page, Fremont, and Montgomery Counties</p>
+	</div>
+	<footer>
 		<hr>
-    <p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
-    </p>
-</footer>
+		<p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
+		</p>
+	</footer>
 </body>
+
 </html>
