--- a/providers.html
+++ b/providers.html
@@ -5,6 +5,8 @@
 	<title>Waubonsie Mental Health Center</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="style.css">
+	<meta name="description" content="A great staff team to for mental help or information about mental health!">
+	<meta name="keywods" content="Mental Health, Waubonsie, Support, Susan Ecker">
 </head>
 <div class="topnav">
 	<a class="active" href="index.html">Home</a>
@@ -45,7 +47,7 @@
 								hiking, golfing, gardening, and watercolor painting. Susan holds a strong belief in mind body connection and practices yoga and meditation.</p>
 						</li>
 					</ul>
-			</td>
+				</td>
 			</tr>
 		</table>
 	</div>
