--- a/services.html
+++ b/services.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Waubonsie Mental Health Center</title>
-		<meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <div class="topnav">
-    <a class="active" href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="providers.html">Providers</a>
-    <a href="FAQ.html">FAQ</a>
-    <a href="extrahelp.html">Extra Help</a>
-    <a href="contact.html">Contact</a>
-  </div>
+
+<head>
+	<title>Waubonsie Mental Health Center</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="style.css">
+	<meta name="description" content="A great staff team to for mental help or information about mental health!">
+	<meta name="keywods" content="Mental Health, Waubonsie, Support, Susan Ecker">
+</head>
+<div class="topnav">
+	<a class="active" href="index.html">Home</a>
+	<a href="services.html">Services</a>
+	<a href="providers.html">Providers</a>
+	<a href="FAQ.html">FAQ</a>
+	<a href="extrahelp.html">Extra Help</a>
+	<a href="contact.html">Contact</a>
+</div>
+
 <body>
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
@@ -22,38 +26,39 @@
 
 		<table>
 			<tbody>
-			<tr>
-				<td>
-		  		<a href="ot.html"><img src="Images\image1.jpeg" alt="outpatient therapy" class="image" style="width:100%">
-				</td>
-				<td>
-					<a href="mm.html"><img src="Images\image2.jpeg" alt="medication management" class="image" style="width:100%">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<a href="comsupser.html"><img src="Images\image3.jpeg" alt="community support services" class="image" style="width:100%">
-				</td>
-				<td>
-					<a href="scl.html"><img src="Images\image4.jpeg" alt="supported community living" class="image" style="width:100%">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<a href="ihh.html"><img src="Images\image5.jpeg" alt="integrated health home" class="image" style="width:100%">
-				</td>
-				<td>
-					<a href="pss.html"><img src="Images\image0 (12).jpeg" alt="peer support services" class="image" style="width:100%">
-				</td>
-			</tr>
+				<tr>
+					<td>
+						<a href="ot.html"><img src="Images\image1.jpeg" alt="outpatient therapy" class="image" style="width:100%">
+					</td>
+					<td>
+						<a href="mm.html"><img src="Images\image2.jpeg" alt="medication management" class="image" style="width:100%">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a href="comsupser.html"><img src="Images\image3.jpeg" alt="community support services" class="image" style="width:100%">
+					</td>
+					<td>
+						<a href="scl.html"><img src="Images\image4.jpeg" alt="supported community living" class="image" style="width:100%">
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<a href="ihh.html"><img src="Images\image5.jpeg" alt="integrated health home" class="image" style="width:100%">
+					</td>
+					<td>
+						<a href="pss.html"><img src="Images\image0 (12).jpeg" alt="peer support services" class="image" style="width:100%">
+					</td>
+				</tr>
 			</tbody>
 		</table>
 	</div>
 
-<footer>
-    <hr>
-    <p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
-    </p>
-</footer>
+	<footer>
+		<hr>
+		<p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
+		</p>
+	</footer>
 </body>
+
 </html>
