--- a/ot.html
+++ b/ot.html
@@ -1,49 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>Waubonsie Mental Health Center</title>
-		<meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <div class="topnav">
-    <a class="active" href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="providers.html">Providers</a>
-    <a href="FAQ.html">FAQ</a>
-    <a href="extrahelp.html">Extra Help</a>
-    <a href="contact.html">Contact</a>
-  </div>
+
+<head>
+	<title>Waubonsie Mental Health Center</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="style.css">
+	<meta name="description" content="A great staff team to for mental help or information about mental health!">
+	<meta name="keywods" content="Mental Health, Waubonsie, Support, Susan Ecker">
+</head>
+<div class="topnav">
+	<a class="active" href="index.html">Home</a>
+	<a href="services.html">Services</a>
+	<a href="providers.html">Providers</a>
+	<a href="FAQ.html">FAQ</a>
+	<a href="extrahelp.html">Extra Help</a>
+	<a href="contact.html">Contact</a>
+</div>
+
 <body>
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
 
-<div id="contact">
-	<div class="services">
-		<h1>Outpatient Therapy</h1>
-	</div>
-	<table>
+	<div id="contact">
+		<div class="services">
+			<h1>Outpatient Therapy</h1>
+		</div>
+		<table>
 			<tr>
-					<td>
-						<p>Therapy is an excellent resource for individuals facing a myriad of challenges ranging from depression or
-							anxiety to trauma- and everything in between. Our licensed staff is trained to work with individuals, couples,
-							and families. Types of therapy offered include Cognitive Behavioral Therapy, EMDR, Play Therapy, and more. </p>
+				<td>
+					<p>Therapy is an excellent resource for individuals facing a myriad of challenges ranging from depression or
+						anxiety to trauma- and everything in between. Our licensed staff is trained to work with individuals, couples,
+						and families. Types of therapy offered include Cognitive Behavioral Therapy, EMDR, Play Therapy, and more. </p>
 
-					<td><img src="Images\DSC01725 (1).jpg"
-					alt="in session"></td>
+				<td><img src="Images\DSC01725 (1).jpg" alt="in session"></td>
 			</tr>
-	</table>
+		</table>
 
-	<h3>Who's eligible to receive this service?</h3>
-	<p>This service is available to adults and children of all ages, from any community, that are capable of attending appointments onsite,
-		 or from their homes via telehealth during standard business hours.</p>
-	<h3>Where can I get this service? </h3>
- 	<p>Clarinda, Red Oak, Shenandoah, & at home via telehealth!</p>
-</div>
-<footer>
-    <hr>
-    <p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
-    </p>
-</footer>
+		<h3>Who's eligible to receive this service?</h3>
+		<p>This service is available to adults and children of all ages, from any community, that are capable of attending appointments onsite,
+			or from their homes via telehealth during standard business hours.</p>
+		<h3>Where can I get this service? </h3>
+		<p>Clarinda, Red Oak, Shenandoah, & at home via telehealth!</p>
+	</div>
+	<footer>
+		<hr>
+		<p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
+		</p>
+	</footer>
 </body>
+
 </html>
