Providers Additions and Rework
Reworked Providers page to have dropdowns and added more people.

--- a/ihh.html
+++ b/ihh.html
@@ -21,24 +21,25 @@
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
-	<div class="services">
-		<h1>Integrated Health Home</h1>
+	<div id="contact">
+		<div class="services">
+			<h1>Integrated Health Home</h1>
+		</div>
+		<table>
+			<tr>
+				<td>
+					<p>Our Integrated Health Home (IHH) is a team of professionals, including family and peer support services, that work together to provide whole-person, patient-centered, coordinated care for
+						adults with a serious mental illness (SMI) and children with a serious emotional disturbance (SED). Our Care Coordinators help IHH members to meet individual goals related to their healthcare
+						needs- and will work with members' to provide information and resources required to assist members with healthy living.</p>
+
+				<td><img src="Images\WomanLeaning.jpeg" alt="talking at desk" width="250"></td>
+			</tr>
+		</table>
+		<h3>Who's eligible to receive this service? </h3>
+		<p>This service is available to children and adults enrolled in Iowa Medicaid and residing in one of the above listed counties. </p>
+		<h3>Where can I get this service?</h3>
+		<p>Page, Fremont, & Montgomery Counties</p>
 	</div>
-	<table>
-		<tr>
-			<td>
-				<p>Our Integrated Health Home (IHH) is a team of professionals, including family and peer support services, that work together to provide whole-person, patient-centered, coordinated care for
-					adults with a serious mental illness (SMI) and children with a serious emotional disturbance (SED). Our Care Coordinators help IHH members to meet individual goals related to their healthcare
-					needs- and will work with members' to provide information and resources required to assist members with healthy living.</p>
-
-			<td><img src="Images\WomanLeaning.jpeg" alt="talking at desk" width="250"></td>
-		</tr>
-	</table>
-	<h3>Who's eligible to receive this service? </h3>
-	<p>This service is available to children and adults enrolled in Iowa Medicaid and residing in one of the above listed counties. </p>
-	<h3>Where can I get this service?</h3>
-	<p>Page, Fremont, & Montgomery Counties</p>
-
 	<footer>
 		<hr>
 		<p class="copyright-text">Copyright &copy; 2021 Waubonsie Mental Health Center
