--- a/pss.html
+++ b/pss.html
@@ -21,33 +21,34 @@
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
 	</div>
-	<div class="services">
-		<h1>Peer Support Services</h1>
-	</div>
-	<table>
-		<tr>
-			<td>
-				<p>Peer Support Services offer opportunities for learning and skill building in a peer-driven setting. Our Peer Support Services offer a dynamic mix of groups, activities, and community outings,
-					facilitated by a certified Peer Support Specialist with lived recovery experience.</p>
+	<div id="contact">
+		<div class="services">
+			<h1>Peer Support Services</h1>
+		</div>
+		<table>
+			<tr>
+				<td>
+					<p>Peer Support Services offer opportunities for learning and skill building in a peer-driven setting. Our Peer Support Services offer a dynamic mix of groups, activities, and community outings,
+						facilitated by a certified Peer Support Specialist with lived recovery experience.</p>
 
-			<td><img src="Images\hands.jpeg" alt="hands" width="250"></td>
-		</tr>
-	</table>
-	<h3>Who's eligible to receive this service? </h3>
-	<p>Any adult with Iowa Medicaid or regional funding. Call our offices for more info!</p>
-	<h3>Where can I get this service?</h3>
-	<p>Peer Support Services are currently offered in:</p>
+				<td><img src="Images\hands.jpeg" alt="hands" width="250"></td>
+			</tr>
+		</table>
+		<h3>Who's eligible to receive this service? </h3>
+		<p>Any adult with Iowa Medicaid or regional funding. Call our offices for more info!</p>
+		<h3>Where can I get this service?</h3>
+		<p>Peer Support Services are currently offered in:</p>
 
 
-	<p>
-	<ul>
-		<li>Clarinda (Tuesdays, 12:30pm-4pm)</li>
-		<li>Red Oak (Wednesdays, 12:30pm-4pm)</li>
-		<li>Shenandoah (Thursdays, 12:30pm-4pm)</li>
-	</ul>
-	</p>
+		<p>
+		<ul>
+			<li>Clarinda (Tuesdays, 12:30pm-4pm)</li>
+			<li>Red Oak (Wednesdays, 12:30pm-4pm)</li>
+			<li>Shenandoah (Thursdays, 12:30pm-4pm)</li>
+		</ul>
+		</p>
 
-	<p>Transportation to Hope Center events and activities may be available through IA Medicaid. Call us to learn more! </p>
+		<p>Transportation to Hope Center events and activities may be available through IA Medicaid. Call us to learn more! </p>
 	</div>
 	<footer>
 		<hr>
