--- a/extrahelp.html
+++ b/extrahelp.html
@@ -16,6 +16,7 @@
 <body>
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
+		<p>Hope 4 Iowa Crisis Line ---- (844) 673-4469</p>
 	</div>
 
 <div id="contact">
@@ -23,6 +24,10 @@
 		<h1>Extra Help</h1>
 	</div>
 
+<p><b>Family members in need of support:</b> <a href="https://namiiowa.org/">namiiowa.org</a></p>
+	<ul>NAMI is a national organization that targets the support of families coping with mental illness.</ul>
+<p><b>Mental health services in Southwest Iowa:</b> <a href="https://iowamhdsregions.org">iowamhdsregions.org</a>
+<p><b>Suicide Prevention Information: National Suicide Prevention Lifeline:</b> <a href="https://suicidepreventionlifeline.org/">suicidepreventionlifeline.org</a>
 	<section>
 	    <h4>What Is Mental Health?</h4>
 	    <p>Mental health is our emotional, psychological, and social well-being. It affects how we think, feel, and act. It also helps determine how we handle stress, relate to others, and make choices. Mental health is important at every stage of life, from childhood through adulthood <a href="https://www.mentalhealth.gov/basics/what-is-mental-health">(mentalhealth.gov)</a>.</p>
