--- a/services.html
+++ b/services.html
@@ -5,6 +5,11 @@
 		<meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
   </head>
+
+	<style>
+	p {text-align: center;}
+	</style>
+
   <div class="topnav">
     <a class="active" href="index.html">Home</a>
     <a href="services.html">Services</a>
@@ -16,38 +21,18 @@
 <body>
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
+		<p>Hope 4 Iowa Crisis Line ---- (844) 673-4469</p>
 	</div>
 	<div class="services">
 		<h1>Services</h1>
 
-		<table>
-			<tbody>
-			<tr>
-				<td>
-		  		<a href="ot.html"><img src="Images\image1.jpeg" alt="outpatient therapy" class="image" style="width:100%">
-				</td>
-				<td>
-					<a href="mm.html"><img src="Images\image2.jpeg" alt="medication management" class="image" style="width:100%">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<a href="comsupser.html"><img src="Images\image3.jpeg" alt="community support services" class="image" style="width:100%">
-				</td>
-				<td>
-					<a href="scl.html"><img src="Images\image4.jpeg" alt="supported community living" class="image" style="width:100%">
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<a href="ihh.html"><img src="Images\image5.jpeg" alt="integrated health home" class="image" style="width:100%">
-				</td>
-				<td>
-					<a href="pss.html"><img src="Images\image0 (12).jpeg" alt="peer support services" class="image" style="width:100%">
-				</td>
-			</tr>
-			</tbody>
-		</table>
+		<p><a href="ot.html">Outpatient Therapy</a></p>
+		<p><a href="mm.html">Medication Management</a></p>
+		<p><a href="comsupser.html">Community Support Services</a></p>
+		<p><a href="scl.html">Supported Community Living</a></p>
+		<p><a href="ihh.html">Integrated Health Home</a></p>
+		<p><a href="pss.html">Peer Support Services</a></p>
+
 	</div>
 
 <footer>
