--- a/FAQ.html
+++ b/FAQ.html
@@ -18,6 +18,7 @@
 <body>
 	<div class="csh">
 		<p>24/7 Crisis Support Hotline ---- (712) 303-7066</p>
+		<p>Hope 4 Iowa Crisis Line ---- (844) 673-4469</p>
 	</div>
 	<h2>Frequently Asked Questions:</h2>
 	<div id="contact">
