--- a/mm.html
+++ b/mm.html
@@ -33,14 +33,14 @@
 					<p>Our licensed and highly qualified Medication Management team offers assessments,
 						prescriptions, and ongoing care/monitoring for individuals taking psychiatric medications. </p>
 
-				<td><img src="Images\medmgt telehealth.jpg" alt="video call"></td>
+								<h3>Who's eligible to receive this service?</h3>
+								<p>This service is available to adults and children of all ages, from any community, that are capable of attending appointments onsite, or from their homes via telehealth during standard business hours. </p>
+								<h3>Where can I get this service? </h3>
+								<p>Clarinda, Red Oak, Shenandoah, Villisca (in collaboration with Villisca Medical Clinic), & at home via telehealth!</p>
+				<td><img src="Images\medmgt telehealth.jpg" alt="video call" width="350"></td>
 			</tr>
 		</table>
 
-		<h3>Who's eligible to receive this service?</h3>
-		<p>This service is available to adults and children of all ages, from any community, that are capable of attending appointments onsite, or from their homes via telehealth during standard business hours. </p>
-		<h3>Where can I get this service? </h3>
-		<p>Clarinda, Red Oak, Shenandoah, Villisca (in collaboration with Villisca Medical Clinic), & at home via telehealth!</p>
 	</div>
 
 	<footer>
