--- a/scl.html
+++ b/scl.html
@@ -33,18 +33,17 @@
 					<p>Like CSS, Supported Community Living also provides home and community-based support to individuals living with serious, persistent mental illness. Together with their assigned Supported Community Living Worker, clients in this program
 						work to develop coping and life skills needed to participate more fully in their communities.
 					</p>
-
-				<td><img src="Images\Roxy Smith.jpg" alt="roxy smith"></td>
+					<h3>Who's eligible to receive this service?</h3>
+					<p>This service is available to adults living in the counties listed above, with a history of psychiatric treatment more intensive than outpatient care, more than once in their lifetime, that are in need of assistance/additional supports in order
+						to function in their community. Iowa Medicaid or regional funding are required for eligibility.
+					</p>
+					<h3>Where can I get this service? </h3>
+					<p>Page, Fremont, and Montgomery Counties
+					</p>
+				<td><img src="Images\Roxy Smith.jpg" alt="roxy smith" width="350"></td>
 			</tr>
 		</table>
 
-		<h3>Who's eligible to receive this service?</h3>
-		<p>This service is available to adults living in the counties listed above, with a history of psychiatric treatment more intensive than outpatient care, more than once in their lifetime, that are in need of assistance/additional supports in order
-			to function in their community. Iowa Medicaid or regional funding are required for eligibility.
-		</p>
-		<h3>Where can I get this service? </h3>
-		<p>Page, Fremont, and Montgomery Counties
-		</p>
 	</div>
 
 	<footer>
